--- a/lambda/package.json
+++ b/lambda/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
     "datadog-metrics": "^0.8.1"
