--- a/lambda/tsconfig.json
+++ b/lambda/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "dist",
     "target": "ES2017"
   }
