Add CI config for Travis
Restructures the folder structure so that Travis can run tests on our
Lambda, and deploy it if it's a build on master.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc",
-    "lint": "tslint --project ."
+    "compile": "tsc --project lambda",
+    "lint": "tslint --project lambda"
   },
   "keywords": [],
   "author": "",
