--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc --project lambda",
-    "lint": "tslint --project lambda"
+    "lint": "tslint --project lambda",
+    "deploy": "serverless deploy"
   },
   "keywords": [],
   "author": "",
