--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ before_install:
 script:
   - "yarn run lint"
   - "yarn run compile"
+  - "echo $TRAVIS_BRANCH"
   - if [ TRAVIS_BRANCH == "master" ]; then yarn deploy; fi
 cache: yarn
