--- a/serverless.yml
+++ b/serverless.yml
@@ -19,10 +19,10 @@ provider:
 
 package:
   include:
-    - dist/**
+    - lambda/dist/node_modules/**
+    - lambda/dist/**/*.js
   exclude:
-    - module/**
-    - "**/*.ts"
+    - ./**/*
 
 functions:
   moistureReading:
