Fix node_modules path definition
I was referencing a completely non-existent path

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,10 +19,10 @@ provider:
 
 package:
   include:
-    - lambda/dist/node_modules/**
     - lambda/dist/**/*.js
   exclude:
     - ./**/*
+    - '!./node_modules/**'
 
 functions:
   moistureReading:
