--- a/serverless.yml
+++ b/serverless.yml
@@ -52,6 +52,7 @@ resources:
 package:
   include:
     - lambda/dist/**/*.js
+    - lambda/plants/*.json
   exclude:
     - ./**/*
     - '!./node_modules/**'
