Switch to on-demand DB instance
Because we have such little usage as it is

--- a/serverless.yml
+++ b/serverless.yml
@@ -44,9 +44,7 @@ resources:
             KeyType: HASH
           - AttributeName: time
             KeyType: RANGE
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
+        BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.DYNAMODB_TABLE}
 
 package:
