--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ service: plantformio
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs12.x
   environment:
     DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
   iamRoleStatements:
